objects/EXPRN__Experian_Business__c.object
<CustomObject>
    <description>Store the Experian Business Account detail.</description>
    <fields>
        <fullName>EXPRN__BIN__c</fullName>
        <externalId>true</externalId>
        <label>BIN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Business_Account_Number__c</fullName>
        <defaultValue>UPPER($User.Id + $Organization.Id)</defaultValue>
        <description>Business - Account Number used for Alert Me functionality</description>
        <label>Business_Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__EXP_Alert_Date_Added__c</fullName>
        <description>Date in which the Experian Business was registered for monitoring</description>
        <label>EXP_Alert_Date_Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EXPRN__EXP_Alert_Source__c</fullName>
        <description>Source from where the Experian business record was registered for monitoring</description>
        <label>EXP_Alert_Source</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__EXP_Is_Monitored__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to check if the Experian Business record has been submitted for monitoring.</description>
        <label>EXP_Is_Monitored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Exp_Business_Phone_No__c</fullName>
        <label>Business Phone No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Exp_City_Name__c</fullName>
        <label>Experian City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Exp_Country__c</fullName>
        <label>Experian Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Exp_STATE__c</fullName>
        <label>Experian State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Exp_Street_Address1__c</fullName>
        <label>Experian Street Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Exp_Tax_ID__c</fullName>
        <label>Tax ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Exp_ZIP__c</fullName>
        <label>Experian Zip</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Global_BIN__c</fullName>
        <label>Global BIN</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EXPRN__MatchingBusinessName__c</fullName>
        <label>MatchingBusinessName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__MatchingCity__c</fullName>
        <label>MatchingCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__MatchingState__c</fullName>
        <label>MatchingState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__MatchingStreetAddress__c</fullName>
        <label>MatchingStreetAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__MatchingZip__c</fullName>
        <label>MatchingZip</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Municipality__c</fullName>
        <label>Municipality</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__NumberOfTradeLines__c</fullName>
        <label>Number Of Trade Lines</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__RBBID__c</fullName>
        <label>Registration Number</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__RBC__c</fullName>
        <label>RBC</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Reference_Information__c</fullName>
        <label>Reference Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Scoring_Model__c</fullName>
        <description>Stores the scoring model used to pull report</description>
        <label>Scoring Model</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Tax_ID_Type__c</fullName>
        <label>Tax ID Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Unique_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EXPRN__isInternational__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International?</label>
        <type>Checkbox</type>
    </fields>
    <label>Experian Business</label>
    <nameField>
        <label>Experian Business Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experian Business</pluralLabel>
    <recordTypes>
        <fullName>EXPRN__Experian_Business</fullName>
        <active>true</active>
        <description>Identifies Business records with BIN</description>
        <label>Experian Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>EXPRN__Experian_International_Business</fullName>
        <active>true</active>
        <description>Identifies International Business (non USA) records with Global BIN</description>
        <label>Experian International Business</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>